--- a/packages/chating/src/views/index.pug
+++ b/packages/chating/src/views/index.pug
@@ -2,7 +2,7 @@ html
   head
     link(href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet")
   body
-    h1.bg-gradient-to-r.from-purple-100.to-gray-200.p-16.text-4xl.font-bold 나의 채팅 서비스
+    h1.bg-gradient-to-r.from-purple-100.to-gray-200.p-16.text-4xl.font-bold 채팅
     div.p-16.space-y-8
       div#chats.bg-gray-100.p-2 채팅 목록
       form#form.space-x-4.flex
